# pyspi

./: .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.txt  README.md  SECURITY.md  conda_build_config.yaml  environment.yml  issues.txt  meta.yaml  phi_demo.ipynb  pyproject.toml  readme.html  readthedocs.yaml  requirements.txt  setup.py  test.ipynb
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
demos/: config.yaml  demo.ipynb  demo.py  demo_ar.py  demo_bivariate_mi.py  demo_clm.py  demo_cml.py  demo_cml2.py  demo_finance.py  demo_hcp.py  demo_load.py  demo_multiple.py  demo_mute.py  demo_netsim.py  demo_sinwave.py  demo_sktime.py  demo_txt.py  demo_var.py  simple_demo.py  sinusoid.npy  tutorial.ipynb
mtsda/: data.py  mtsda.py
nats/: data.py  jidt.py  nats_utils.py  pnats.py
nats.egg-info/: PKG-INFO  SOURCES.txt
pynats/: __init__.py  base.py  basedep.py  basic.py  btsa.py  calculator.py  causal.py  config.yaml  container.py  correlation.py  data.py  independence.py  infotheory.py  neuroimaging.py  plot.py  ptsa.py  pynats_utils.py  reducedconfig.yaml  spectral.py  stats.py  temporal.py  utils.py  wavelet.py
pynats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyspi/: base.py  base_new.py  calculator.py  calculator_time.py  config.yaml  configv2.yaml  data.py  fabfour_config.yaml  fast_config.yaml  filtered_config.yaml  new_spis.yaml  octaveless_config.yaml  phiconf.yaml  sonnet_config.yaml  test_yaml.ipynb  utils.py
test/: test_compute.py  test_data.py  test_measures.py  (+4 more)
(+1235 files in other folders)
